# resemble-mcp

./: README.md
resemble_service/: .gitignore  README.md  pyproject.toml
resemble_service/src/coding_challenge/: server.py
